--- a/app/src/main/res/layout/activity_registration_seller2.xml
+++ b/app/src/main/res/layout/activity_registration_seller2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.customer.RegistrationActivity">
+    tools:context=".ui.activity.selller.RegistrationSeller2Activity">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imgLogo"
@@ -17,7 +17,7 @@
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Buat Akun"
+        android:text="Lengkapi Data"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
@@ -33,7 +33,7 @@
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="200dp"
-        android:hint=" Nama Lengkap"
+        android:hint=" Nama Pemilik Toko"
         app:boxCornerRadiusBottomEnd="26dp"
         app:boxCornerRadiusBottomStart="26dp"
         app:boxCornerRadiusTopEnd="26dp"
@@ -43,6 +43,28 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputFullName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/nikTextField"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="6dp"
+        android:hint=" NIK"
+        app:boxCornerRadiusBottomEnd="26dp"
+        app:boxCornerRadiusBottomStart="26dp"
+        app:boxCornerRadiusTopEnd="26dp"
+        app:boxCornerRadiusTopStart="26dp"
+        app:layout_constraintTop_toBottomOf="@id/fullNameTextField">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputNik"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
@@ -61,7 +83,7 @@
         app:boxCornerRadiusBottomStart="26dp"
         app:boxCornerRadiusTopEnd="26dp"
         app:boxCornerRadiusTopStart="26dp"
-        app:layout_constraintTop_toBottomOf="@+id/fullNameTextField">
+        app:layout_constraintTop_toBottomOf="@+id/nikTextField">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputEmail"
@@ -117,7 +139,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnRegistration"
+        android:id="@+id/btnRegistrationSeller"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
@@ -135,5 +157,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
