--- a/app/src/main/res/layout/activity_login_seller.xml
+++ b/app/src/main/res/layout/activity_login_seller.xml
@@ -4,50 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.customer.RegistrationActivity">
+    tools:context=".ui.activity.selller.LoginSellerActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imgLogo"
         android:layout_width="match_parent"
-        android:layout_height="120dp"
+        android:layout_height="wrap_content"
         android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@id/fullNameTextField"
+        app:layout_constraintBottom_toTopOf="@id/emailTextField"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.appcompat.widget.AppCompatTextView
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Buat Akun"
+        android:text="Masuk Toko"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/fullNameTextField"
+        app:layout_constraintBottom_toTopOf="@+id/emailTextField"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/fullNameTextField"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="200dp"
-        android:hint=" Nama Lengkap"
-        app:boxCornerRadiusBottomEnd="26dp"
-        app:boxCornerRadiusBottomStart="26dp"
-        app:boxCornerRadiusTopEnd="26dp"
-        app:boxCornerRadiusTopStart="26dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputFullName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text" />
-
-    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/emailTextField"
@@ -55,13 +31,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="6dp"
         android:hint=" Email"
         app:boxCornerRadiusBottomEnd="26dp"
         app:boxCornerRadiusBottomStart="26dp"
         app:boxCornerRadiusTopEnd="26dp"
         app:boxCornerRadiusTopStart="26dp"
-        app:layout_constraintTop_toBottomOf="@+id/fullNameTextField">
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/inputEmail"
@@ -77,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginTop="12dp"
         android:hint=" Kata Sandi"
         app:boxCornerRadiusBottomEnd="26dp"
         app:boxCornerRadiusBottomStart="26dp"
@@ -94,46 +70,23 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/phoneTextField"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="6dp"
-        android:hint=" No. Telepon"
-        app:boxCornerRadiusBottomEnd="26dp"
-        app:boxCornerRadiusBottomStart="26dp"
-        app:boxCornerRadiusTopEnd="26dp"
-        app:boxCornerRadiusTopStart="26dp"
-        app:layout_constraintTop_toBottomOf="@id/passwordTextField">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputPhone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnRegistration"
+        android:id="@+id/btnLoginSeller"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="12dp"
-        android:text="daftar"
+        android:text="masuk"
         app:cornerRadius="18dp"
-        app:layout_constraintTop_toBottomOf="@id/phoneTextField" />
+        app:layout_constraintTop_toBottomOf="@id/passwordTextField" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="Sudah Punya Akun? Masuk"
+        android:text="Belum Punya Akun? Buat akun"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
