--- a/app/src/main/res/layout/activity_registration_seller.xml
+++ b/app/src/main/res/layout/activity_registration_seller.xml
@@ -4,36 +4,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.customer.RegistrationActivity">
+    tools:context=".ui.activity.selller.RegistrationSellerActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/imgLogo"
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@id/fullNameTextField"
+        app:layout_constraintBottom_toTopOf="@id/shopNameTextField"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Buat Akun"
+        android:text="Data Toko"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/fullNameTextField"
+        app:layout_constraintBottom_toTopOf="@id/shopNameTextField"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/fullNameTextField"
+        android:id="@+id/shopNameTextField"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="200dp"
-        android:hint=" Nama Lengkap"
+        android:hint=" Nama Toko"
         app:boxCornerRadiusBottomEnd="26dp"
         app:boxCornerRadiusBottomStart="26dp"
         app:boxCornerRadiusTopEnd="26dp"
@@ -42,7 +42,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputFullName"
+            android:id="@+id/inputShopName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
@@ -50,21 +50,42 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/emailTextField"
+        android:id="@+id/businessPermitTextField"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="6dp"
-        android:hint=" Email"
+        android:hint=" Izin Usaha"
         app:boxCornerRadiusBottomEnd="26dp"
         app:boxCornerRadiusBottomStart="26dp"
         app:boxCornerRadiusTopEnd="26dp"
         app:boxCornerRadiusTopStart="26dp"
-        app:layout_constraintTop_toBottomOf="@+id/fullNameTextField">
+        app:layout_constraintTop_toBottomOf="@id/shopNameTextField">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputEmail"
+            android:id="@+id/inputBusinessPermit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+ <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/npwpTextField"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="6dp"
+        android:hint=" NPWP"
+        app:boxCornerRadiusBottomEnd="26dp"
+        app:boxCornerRadiusBottomStart="26dp"
+        app:boxCornerRadiusTopEnd="26dp"
+        app:boxCornerRadiusTopStart="26dp"
+        app:layout_constraintTop_toBottomOf="@id/businessPermitTextField">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputNpwp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
@@ -72,68 +93,44 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/passwordTextField"
+        android:id="@+id/shopAddressTextField"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="6dp"
-        android:hint=" Kata Sandi"
+        android:hint=" Alamat Toko"
         app:boxCornerRadiusBottomEnd="26dp"
         app:boxCornerRadiusBottomStart="26dp"
         app:boxCornerRadiusTopEnd="26dp"
         app:boxCornerRadiusTopStart="26dp"
-        app:endIconMode="password_toggle"
-        app:layout_constraintTop_toBottomOf="@id/emailTextField">
+        app:layout_constraintTop_toBottomOf="@+id/npwpTextField">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputPassword"
+            android:id="@+id/inputShopAddress"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword" />
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/phoneTextField"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="6dp"
-        android:hint=" No. Telepon"
-        app:boxCornerRadiusBottomEnd="26dp"
-        app:boxCornerRadiusBottomStart="26dp"
-        app:boxCornerRadiusTopEnd="26dp"
-        app:boxCornerRadiusTopStart="26dp"
-        app:layout_constraintTop_toBottomOf="@id/passwordTextField">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputPhone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number" />
+            android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btnRegistration"
+        android:id="@+id/btnNext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="12dp"
-        android:text="daftar"
+        android:text="Selanjutnya"
         app:cornerRadius="18dp"
-        app:layout_constraintTop_toBottomOf="@id/phoneTextField" />
+        app:layout_constraintTop_toBottomOf="@id/shopAddressTextField" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="Sudah Punya Akun? Masuk"
+        android:text="Syarat, Ketentuan dan Kebijakan Privasi"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
