--- a/app/src/main/res/layout/activity_login_as.xml
+++ b/app/src/main/res/layout/activity_login_as.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="32dp"
+        app:layout_constraintBottom_toTopOf="@+id/tvMasuk"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
 
@@ -46,4 +47,6 @@
         android:text="Customer"
         app:cornerRadius="18dp"
         app:layout_constraintTop_toBottomOf="@+id/btnSeller" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
