--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -31,9 +31,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Akun"
-                        android:textStyle="bold"
                         android:textColor="@color/white"
                         android:textSize="18sp"
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -53,23 +53,45 @@
                 android:paddingHorizontal="32dp"
                 android:paddingVertical="24dp">
 
+                <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/imgProfileAccount"
+                    android:layout_width="80dp"
+                    android:layout_height="80dp"
+                    android:src="@color/gray"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintBottom_toBottomOf="@id/imgProfileAccount"
+                    app:layout_constraintLeft_toRightOf="@id/imgProfileAccount"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/imgProfileAccount"
+                    tools:text="Nama Account" />
+
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvMyOrder"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="24dp"
                     android:drawableRight="@drawable/ic_right"
                     android:text="Pesanan Saya"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toBottomOf="@id/imgProfileAccount" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvDataDiri"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="12dp"
+                    android:drawableRight="@drawable/ic_right"
                     android:text="Data Diri"
                     android:textColor="@color/black"
                     android:textSize="18sp"
@@ -78,149 +100,22 @@
                     app:layout_constraintTop_toBottomOf="@id/tvMyOrder" />
 
                 <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvInfoName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:text="Nama : "
-                    android:textColor="@color/black"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvDataDiri" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvAccountName"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@id/tvInfoName"
-                    app:layout_constraintLeft_toRightOf="@+id/tvInfoName"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/tvInfoName"
-                    tools:text="nama akun" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvInfoBirth"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:text="Tanggal Lahir : "
-                    android:textColor="@color/black"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvAccountName" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvAccountBirth"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/tvInfoBirth"
-                    app:layout_constraintLeft_toRightOf="@+id/tvInfoBirth"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/tvInfoBirth"
-                    tools:text="15 november 2000" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvInfoGender"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:text="Jenis Kelamin : "
-                    android:textColor="@color/black"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvAccountBirth" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvAccountGender"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/tvInfoGender"
-                    app:layout_constraintLeft_toRightOf="@+id/tvInfoGender"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/tvInfoGender"
-                    tools:text="Laki-laki" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvInfoEmail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:text="Email : "
-                    android:textColor="@color/black"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvAccountGender" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvAccountEmail"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/tvInfoEmail"
-                    app:layout_constraintLeft_toRightOf="@+id/tvInfoEmail"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/tvInfoEmail"
-                    tools:text="email@example.com" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvInfoHp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:text="Telepon : "
-                    android:textColor="@color/black"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvAccountEmail" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvAccountHp"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/tvInfoHp"
-                    app:layout_constraintLeft_toRightOf="@+id/tvInfoHp"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/tvInfoHp"
-                    tools:text="098989898989" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvInfoAddress"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
-                    android:text="Alamat : "
-                    android:textColor="@color/black"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvAccountHp" />
-
-                <androidx.appcompat.widget.AppCompatTextView
-                    android:id="@+id/tvAccountAddress"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/black"
-                    app:layout_constraintBottom_toBottomOf="@+id/tvInfoAddress"
-                    app:layout_constraintLeft_toRightOf="@+id/tvInfoAddress"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/tvInfoAddress"
-                    tools:text="jl. goa ria" />
-
-
-                <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvOther"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="24dp"
+                    android:layout_marginTop="12dp"
                     android:text="Lainnya"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvAccountAddress" />
+                    app:layout_constraintTop_toBottomOf="@id/tvDataDiri" />
 
                 <androidx.appcompat.widget.AppCompatTextView
                     android:id="@+id/tvTentang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
+                    android:layout_marginTop="12dp"
                     android:text="Tentang Mart Bangunan"
                     android:textColor="@color/black"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -230,7 +125,7 @@
                     android:id="@+id/tvSyarat7Ketentuan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
+                    android:layout_marginTop="12dp"
                     android:text="Syarat dan Ketentuan"
                     android:textColor="@color/black"
                     app:layout_constraintLeft_toLeftOf="parent"
@@ -240,9 +135,10 @@
                     android:id="@+id/tvlogout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="6dp"
+                    android:layout_marginTop="12dp"
                     android:text="Keluar"
                     android:textColor="@color/red"
+                    android:textStyle="bold"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/tvSyarat7Ketentuan" />
 
