--- a/app/src/main/res/menu/navigation_menu_seller.xml
+++ b/app/src/main/res/menu/navigation_menu_seller.xml
@@ -2,17 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navHome"
-        android:icon="@drawable/ic_home"
-        android:title="Beranda" />
+        android:id="@+id/navProduct"
+        android:icon="@drawable/ic_category"
+        android:title="Produk" />
     <item
         android:id="@+id/navChat"
         android:icon="@drawable/ic_chat"
         android:title="Chat" />
-    <item
-        android:id="@+id/navProduct"
-        android:icon="@drawable/ic_category"
-        android:title="Produk" />
     <item
         android:id="@+id/navSale"
         android:icon="@drawable/ic_sold"
@@ -20,5 +16,5 @@
     <item
         android:id="@+id/navOthers"
         android:icon="@drawable/ic_account"
-        android:title="Lainnya" />
+        android:title="Akun" />
 </menu>
