--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="yellow">#FFB300</color>
     <color name="yellow_light">#E3D700</color>
     <color name="gray">#9E9E9E</color>
+    <color name="gray_light">#DCDCDC</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
