--- a/app/src/main/res/layout/activity_registration_seller.xml
+++ b/app/src/main/res/layout/activity_registration_seller.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/parentRegistrationSeller"
     tools:context=".ui.activity.selller.RegistrationSellerActivity">
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -11,29 +12,29 @@
         android:layout_width="match_parent"
         android:layout_height="120dp"
         android:src="@drawable/logo"
-        app:layout_constraintBottom_toTopOf="@id/shopNameTextField"
+        app:layout_constraintBottom_toTopOf="@id/fullNameTextField"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Data Toko"
+        android:text="Buat Akun"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@id/shopNameTextField"
+        app:layout_constraintBottom_toTopOf="@id/fullNameTextField"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/shopNameTextField"
+        android:id="@+id/fullNameTextField"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="6dp"
         android:layout_marginBottom="200dp"
-        android:hint=" Nama Toko"
+        android:hint=" Nama Lengkap"
         app:boxCornerRadiusBottomEnd="26dp"
         app:boxCornerRadiusBottomStart="26dp"
         app:boxCornerRadiusTopEnd="26dp"
@@ -42,7 +43,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputShopName"
+            android:id="@+id/inputFullName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
@@ -50,42 +51,21 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/businessPermitTextField"
+        android:id="@+id/emailTextField"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="6dp"
-        android:hint=" Izin Usaha"
+        android:hint=" Email"
         app:boxCornerRadiusBottomEnd="26dp"
         app:boxCornerRadiusBottomStart="26dp"
         app:boxCornerRadiusTopEnd="26dp"
         app:boxCornerRadiusTopStart="26dp"
-        app:layout_constraintTop_toBottomOf="@id/shopNameTextField">
+        app:layout_constraintTop_toBottomOf="@+id/fullNameTextField">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputBusinessPermit"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text" />
-
-    </com.google.android.material.textfield.TextInputLayout>
- <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/npwpTextField"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp"
-        android:layout_marginTop="6dp"
-        android:hint=" NPWP"
-        app:boxCornerRadiusBottomEnd="26dp"
-        app:boxCornerRadiusBottomStart="26dp"
-        app:boxCornerRadiusTopEnd="26dp"
-        app:boxCornerRadiusTopStart="26dp"
-        app:layout_constraintTop_toBottomOf="@id/businessPermitTextField">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputNpwp"
+            android:id="@+id/inputEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text" />
@@ -93,24 +73,47 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/shopAddressTextField"
+        android:id="@+id/passwordTextField"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginTop="6dp"
-        android:hint=" Alamat Toko"
+        android:hint=" Kata Sandi"
         app:boxCornerRadiusBottomEnd="26dp"
         app:boxCornerRadiusBottomStart="26dp"
         app:boxCornerRadiusTopEnd="26dp"
         app:boxCornerRadiusTopStart="26dp"
-        app:layout_constraintTop_toBottomOf="@+id/npwpTextField">
+        app:endIconMode="password_toggle"
+        app:layout_constraintTop_toBottomOf="@id/emailTextField">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/inputShopAddress"
+            android:id="@+id/inputPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="textPassword" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/phoneTextField"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="32dp"
+        android:layout_marginTop="6dp"
+        android:hint=" No. Telepon"
+        app:boxCornerRadiusBottomEnd="26dp"
+        app:boxCornerRadiusBottomStart="26dp"
+        app:boxCornerRadiusTopEnd="26dp"
+        app:boxCornerRadiusTopStart="26dp"
+        app:layout_constraintTop_toBottomOf="@id/passwordTextField">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/inputPhone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -122,15 +125,16 @@
         android:layout_marginTop="12dp"
         android:text="Selanjutnya"
         app:cornerRadius="18dp"
-        app:layout_constraintTop_toBottomOf="@id/shopAddressTextField" />
+        app:layout_constraintTop_toBottomOf="@id/phoneTextField" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="Syarat, Ketentuan dan Kebijakan Privasi"
+        android:text="Sudah Punya Akun? Masuk"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
