--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -79,18 +79,18 @@
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="@id/imgProfileAccount" />
 
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tvMyOrder"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        android:drawableRight="@drawable/ic_right"
-                        android:text="Pesanan Saya"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/imgProfileAccount" />
+<!--                    <androidx.appcompat.widget.AppCompatTextView-->
+<!--                        android:id="@+id/tvMyOrder"-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:layout_marginTop="24dp"-->
+<!--                        android:drawableRight="@drawable/ic_right"-->
+<!--                        android:text="Pesanan Saya"-->
+<!--                        android:textColor="@color/black"-->
+<!--                        android:textSize="18sp"-->
+<!--                        android:textStyle="bold"-->
+<!--                        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--                        app:layout_constraintTop_toBottomOf="@id/imgProfileAccount" />-->
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tvDataDiri"
@@ -103,7 +103,7 @@
                         android:textSize="18sp"
                         android:textStyle="bold"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tvMyOrder" />
+                        app:layout_constraintTop_toBottomOf="@id/imgProfileAccount" />
 
                     <androidx.appcompat.widget.AppCompatTextView
                         android:id="@+id/tvOther"
